Fix: list view does not show on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body {
   display: none;
 }
 .show {
-  display: block;
+  display: block !important;
 }
 
 /* MOBILE MENU */
